crates/solverforge-macros/tests/ui/fail/planning_solution_malformed_argument.rs
use solverforge_macros::planning_solution;

#[planning_solution(conflict_repairs = repairs)]
struct Plan {}

fn main() {}
